fixed overflow issues and other style issues

--- a/react-front/src/App.css
+++ b/react-front/src/App.css
@@ -19,14 +19,11 @@
     background-color: rgba(255,255,255,0.95);
 }
 
-#body {
-    background-image: url("./images/background2.jpeg");
-}
-
 .Wrapper {
     width: 100%;
     height:118vh;
     background-size: cover;
+    background-image: url("./images/background2.jpeg");
 }
 
 .navbar {
@@ -62,7 +59,14 @@
 
 .Tips {
     float: left;
-    width: 30%;
+    width: 65%;
+    overflow-y: auto;
+    max-height: 90vh;
+    padding-right: 50px;
+}
+
+.BookList {
+    
 }
 
 
